# alignment-safety

./: .gitignore  Snakefile
alpha-safe-paths/: README  README.md  main.cc
annotation/: Code.ipynb  InPut.ipynb  Metric_Creation.ipynb  OutPuts.ipynb  Prediction_NN.ipynb  Priting_Compilations.ipynb  SubCluster-Reduced.ipynb  TreeCalculations.ipynb  commonFunctions.ipynb
pipeline/: README.md  Snakefile  environment.yaml  parameters.yaml  slurm-136968809.out  snakemake.yaml
pipeline/analysis/: Acyltransferase.cif  HAD.cif  benchmark.ipynb  data.ipynb  domains.ipynb  motifs.ipynb  references.ipynb  stat_windows.ipynb  tmscore.ipynb  windows.ipynb
pipeline/pipeline_config/: settings.json
pipeline/scripts/: Safe.py  change_ref.py  clusteread.py  db.py  extract_family.py  filter_sprot.py  raxml_stats.py  safety_sampler.py  sefflog.py  split_safes.py  taxtree.py  temp.py  validate.py
pipeline/turso/: config.yaml  create_single_report.py  delete_erroneous_outputs.py  list_unsuccessful_slurm_logs.py  notes.txt  parameters.yaml  parse_sbatch_job_id.sh  run.sh  run_on_turso.sh  safe.sbatch  settings.json  slurm-submit.py
pipeline/util/: delete_erroneous_outputs.py  get_slurm_job_status.py  list_unsuccessful_slurm_logs.py  run_on_turso.sh
safety-windows/: .alpha_safe_paths.cc.swp  CMakeLists.txt  README  alpha_safe_paths.cc  alpha_safe_paths.h  draw_subgraph.cc  draw_subgraph.h  main  main.cc  optimal_paths.cc  optimal_paths.h  safety_windows.cc  safety_windows.h  simple_exp.py
scripts/: clusteread.py  taxtree.py
